--- a/packages/govern-core/tsconfig.json
+++ b/packages/govern-core/tsconfig.json
@@ -6,13 +6,12 @@
     "esModuleInterop": true,
     "outDir": "dist"
   },
-  "include": ["./scripts", "./test"],
+  "include": ["./test"],
   "files": [
     "./buidler.config.ts",
     "../../node_modules/@nomiclabs/buidler-ethers/src/type-extensions.d.ts",
     "../../node_modules/@nomiclabs/buidler-waffle/src/type-extensions.d.ts",
     "../../node_modules/@nomiclabs/buidler-etherscan/src/type-extensions.d.ts",
-    "../../node_modules/buidler-typechain/src/type-extensions.d.ts",
-    "../../node_modules/buidler-local-networks-config-plugin/src/type-extensions.d.ts"
+    "../../node_modules/buidler-typechain/src/type-extensions.d.ts"
   ]
 }
