--- a/packages/govern-create/package.json
+++ b/packages/govern-create/package.json
@@ -26,11 +26,23 @@
     "@nomiclabs/buidler": "^1.4.7",
     "@nomiclabs/buidler-ethers": "^2.0.0",
     "@nomiclabs/buidler-waffle": "^2.0.0",
+    "@typechain/ethers-v5": "^2.0.0",
+    "@types/chai": "^4.2.13",
+    "@types/chalk": "^2.2.0",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.11.8",
+    "buidler-typechain": "^0.2.1",
     "chai": "^4.2.0",
+    "chalk": "^4.1.0",
     "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0"
+    "ethers": "^5.0.0",
+    "ts-generator": "0.1.1",
+    "ts-node": "^9.0.0",
+    "typechain": "3.0.0",
+    "typescript": "^4.0.3"
   },
   "scripts": {
+    "build": "yarn compile && buidler typechain",
     "clean": "rm -rf artifacts",
     "coverage": "SOLIDITY_COVERAGE=true buidler coverage --network coverage",
     "compile": "buidler compile --force",
