--- a/packages/govern-create/tsconfig.json
+++ b/packages/govern-create/tsconfig.json
@@ -6,11 +6,12 @@
     "esModuleInterop": true,
     "outDir": "dist"
   },
-  "include": ["./test"],
+  "include": ["./helpers", "./tasks", "./test"],
   "files": [
     "./buidler.config.ts",
     "../../node_modules/@nomiclabs/buidler-ethers/src/type-extensions.d.ts",
     "../../node_modules/@nomiclabs/buidler-waffle/src/type-extensions.d.ts",
+    "../../node_modules/@nomiclabs/buidler-etherscan/src/type-extensions.d.ts",
     "../../node_modules/buidler-typechain/src/type-extensions.d.ts"
   ]
 }
