Create: hardhat migration

--- a/packages/govern-create/tsconfig.json
+++ b/packages/govern-create/tsconfig.json
@@ -1,17 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
+    "target": "es2018",
     "strict": true,
     "esModuleInterop": true,
     "outDir": "dist"
   },
   "include": ["./helpers", "./tasks", "./test"],
-  "files": [
-    "./buidler.config.ts",
-    "../../node_modules/@nomiclabs/buidler-ethers/src/type-extensions.d.ts",
-    "../../node_modules/@nomiclabs/buidler-waffle/src/type-extensions.d.ts",
-    "../../node_modules/@nomiclabs/buidler-etherscan/src/type-extensions.d.ts",
-    "../../node_modules/buidler-typechain/src/type-extensions.d.ts"
-  ]
+  "files": ["./hardhat.config.ts"]
 }
