--- a/packages/govern-create/package.json
+++ b/packages/govern-create/package.json
@@ -17,39 +17,42 @@
   "dependencies": {
     "@aragon/govern-core": "^1.0.0-beta.0",
     "@aragon/govern-token": "^1.0.0-beta.0",
-    "@nomiclabs/buidler-etherscan": "^2.1.0",
     "dotenv": "^8.2.0",
     "node-fetch": "^2.6.1",
     "unique-names-generator": "^4.3.1",
     "web3-eth-abi": "^1.3.0"
   },
   "devDependencies": {
-    "@nomiclabs/buidler": "^1.4.7",
-    "@nomiclabs/buidler-ethers": "^2.0.0",
-    "@nomiclabs/buidler-waffle": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@typechain/ethers-v5": "^2.0.0",
     "@types/chai": "^4.2.13",
     "@types/chalk": "^2.2.0",
+    "@types/lowdb": "^1.0.9",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.11.8",
-    "buidler-typechain": "^0.2.1",
     "chai": "^4.2.0",
     "chalk": "^4.1.0",
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0",
+    "hardhat": "^2.0.2",
+    "hardhat-typechain": "^0.3.3",
+    "lowdb": "^1.0.0",
+    "tmp-promise": "^3.0.2",
     "ts-generator": "0.1.1",
     "ts-node": "^9.0.0",
     "typechain": "3.0.0",
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "build": "yarn compile && buidler typechain",
+    "build": "SKIP_TASKS=true yarn compile",
     "clean": "rm -rf artifacts",
-    "coverage": "SOLIDITY_COVERAGE=true buidler coverage --network coverage",
-    "compile": "buidler compile --force",
-    "deploy-factory": "yarn compile && buidler deploy-factory",
-    "deploy-govern": "buidler deploy-govern",
-    "test": "buidler test",
+    "coverage": "SOLIDITY_COVERAGE=true hardhat coverage --network coverage",
+    "compile": "hardhat compile --force",
+    "deploy-factory": "yarn compile && hardhat deploy-factory",
+    "deploy-govern": "hardhat deploy-govern",
+    "test": "hardhat test",
     "prepublishOnly": "yarn test && yarn compile"
   }
 }
