--- a/.github/workflows/subgraph-ci-cd.yml
+++ b/.github/workflows/subgraph-ci-cd.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: yarn
+    - run: yarn install --frozen-lockfile
     - run: .github/scripts/kubectl-config.sh ${{secrets.KUBE_CA}} ${{secrets.KUBE_SERVER}} ${{secrets.KUBE_TOKEN}}
     - run: yarn deploy:subgraph:rinkeby
     - run: yarn deploy:subgraph:mainnet
