--- a/.github/workflows/contracts-ci-cd.yml
+++ b/.github/workflows/contracts-ci-cd.yml
@@ -1,8 +1,6 @@
 name: Contracts CI/CD
 on: push
 env:
-  # This is a base repository and we use github refs to set the version of the container
-  DOCKER_REPO: aragon/govern
 
 jobs:
   build:
@@ -10,11 +8,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: docker login -u ${{secrets.DOCKERHUB_USER}} -p ${{secrets.DOCKERHUB_TOKEN}}
-    - run: .github/scripts/docker-build.sh . $REPO $GITHUB_SHA
+    - run: .github/scripts/docker-build.sh . aragon/govern $GITHUB_SHA
 
   coverage:
     runs-on: ubuntu-latest
-    container: ${{env.DOCKER_REPO}}:${{github.sha}}
+    container: aragon/govern:${{github.sha}}
     needs: build
     steps:
     - name: Run coverage
@@ -26,7 +24,7 @@ jobs:
 
   # deploy-rinkeby:
   #   runs-on: ubuntu-latest
-  #   container: ${{env.DOCKER_REPO}}:${{github.sha}}
+  #   container: aragon/govern:${{github.sha}}
   #   needs: coverage
   #   env:
   #     CD: true
