--- a/.github/workflows/contracts-ci-cd.yml
+++ b/.github/workflows/contracts-ci-cd.yml
@@ -6,12 +6,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: docker login -u ${{secrets.DOCKERHUB_USER}} -p ${{secrets.DOCKERHUB_TOKEN}}
-    - run: .github/scripts/docker-build.sh . aragon/govern $GITHUB_SHA
+    - run: docker login -u $GITHUB_ACTOR -p ${{secrets.GITHUB_TOKEN}}
+    - run: .github/scripts/docker-build.sh . docker.pkg.github.com/promaty/govern/test $GITHUB_SHA
 
   coverage:
     runs-on: ubuntu-latest
-    container: aragon/govern:${{github.sha}}
+    container: docker.pkg.github.com/promaty/govern/test:${{github.sha}}
     needs: build
     steps:
     - name: Run coverage
