--- a/.github/workflows/contracts-ci-cd.yml
+++ b/.github/workflows/contracts-ci-cd.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: docker login -u $GITHUB_ACTOR -p ${{secrets.GITHUB_TOKEN}}
+    - run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p ${{secrets.GITHUB_TOKEN}}
     - run: .github/scripts/docker-build.sh . docker.pkg.github.com/promaty/govern/test $GITHUB_SHA
 
   coverage:
